--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Todo List</title>
+    <link rel="stylesheet" href="../styles/styles.css">
   </head>
   <body>
-    <h1>It's <%=day%></h1>
+    <h1 id="heading">It's <%=day%></h1>
     <h2>What are your priorities today?</h2>
     <form method="POST" action="/">
       <input
