--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,7 +15,7 @@
 
             <div class="box">
 
-    <form class="item" method="POST" action="/">
+    <form class="form" method="POST" action="/">
       <input
         type="text"
         name="addInput"
