need to fix api data display error

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,6 +10,7 @@
   <body>
     <div class="box" id="heading">
 <h1>It's <%=day%></h1>
+<h2 id="weather">Current Weather: <%=weather%></h2>
     </div>
         <h2>What are your priorities today?</h2>
 
