fixed api data display issue

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,8 @@
   <body>
     <div class="box" id="heading">
 <h1>It's <%=day%></h1>
-<h2 id="weather">Current Weather: <%=weather%></h2>
+<img src="" alt="weather-icon">
+<h2 id="weather"><%= weather %></h2>
     </div>
         <h2>What are your priorities today?</h2>
 
