add ipStack api /w loc, lat, long

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
     <div class="box" id="heading">
 <h1>It's <%=day%></h1>
 <img src="" alt="weather-icon">
-<h2 id="weather"><%= weather %></h2>
+<p id="weather"><%= weather %></p>
     </div>
         <h2>What are your priorities today?</h2>
 
