--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,8 +10,10 @@
   <body>
     <div class="box" id="heading">
 <h1>It's <%=day%></h1>
-<img src="" alt="weather-icon">
+<div class="weather__box">
+<img src=`${<%=icon%}>` alt="weather-icon">
 <p id="weather"><%= weather %></p>
+</div>
     </div>
         <h2>What are your priorities today?</h2>
 
