weather image displays based off weather value

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
     <div class="box" id="heading">
 <h1>It's <%=day%></h1>
 <div class="weather__box">
-<img src=`${<%=icon%}>` alt="weather-icon">
+<img src=<%=icon%> alt="weather-icon" class="weather-image">
 <p id="weather"><%= weather %></p>
 </div>
     </div>
