--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,5 @@
 html {
   background-color: #e4e9fd;
-  background-image: -webkit-linear-gradient(65deg, #a683e3 50%, #e4e9fd 50%);
   min-height: 1000px;
   font-family: "Arial";
 }
@@ -8,6 +7,7 @@ html {
 h1 {
   color: #fff;
   padding: 10px;
+  margin-bottom: 0;
 }
 
 h2 {
@@ -16,6 +16,7 @@ h2 {
 
 .box {
   max-width: 400px;
+  min-height: 430px;
   margin: 50px auto;
   background: white;
   border-radius: 5px;
@@ -39,6 +40,21 @@ h2 {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #f1f1f1;
+}
+
+.weather-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+
+#weather {
+  color: white;
+  font-size: 20px;
+  opacity: 0.5;
+  position: absolute;
+  bottom: 278px;
+  padding: 8px;
 }
 
 .item:last-child {
