fixed image display issue; minor styling fixes

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #e4e9fd;
+  background-color: #98e8ff;
   min-height: 1000px;
   font-family: "Arial";
 }
@@ -12,20 +12,31 @@ h1 {
 
 h2 {
   text-align: center;
+  color: white;
+  text-shadow: 1px 3px #ff729d;
 }
 
 .box {
   max-width: 400px;
-  min-height: 430px;
   margin: 50px auto;
   background: white;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
+.weather__box {
+  min-height: 400px;
+}
+.priority__box {
+  background: black;
+  height: 30px;
+  box-shadow: 1px 3px grey;
+  border-radius: 6px;
+}
 #heading {
-  background-color: #a683e3;
+  background-color: #ff729d;
   text-align: center;
+  height: 550px;
 }
 
 .item {
@@ -40,21 +51,22 @@ h2 {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #f1f1f1;
+  background: white;
 }
 
 .weather-image {
   width: 100%;
   height: 100%;
-  border-radius: 6px;
+  border-radius: 0px 0px 6px 6px;
 }
 
 #weather {
   color: white;
-  font-size: 20px;
-  opacity: 0.5;
+  font-size: 30px;
   position: absolute;
   bottom: 278px;
   padding: 8px;
+  text-shadow: 2px 3px black;
 }
 
 .item:last-child {
@@ -65,7 +77,7 @@ input:checked + p {
   text-decoration: line-through;
   font-style: italic;
   opacity: 0.2;
-  text-decoration-color: #a683e3;
+  text-decoration-color: black;
 }
 
 input[type="checkbox"] {
@@ -90,7 +102,7 @@ button {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #a683e3;
+  background-color: #ff729d;
   color: #fff;
   font-size: 30px;
   padding-bottom: 1px;
@@ -110,7 +122,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #a683e3;
+  box-shadow: inset 0 -3px 0 0 #ffbc77;
 }
 
 ::placeholder {
