--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,28 +8,37 @@
     <link rel="stylesheet" href="../styles/styles.css">
   </head>
   <body>
+
+
     <div class="box" id="heading">
+
 <h1>It's <%=day%></h1>
 <div class="weather__box">
 <img src=<%=icon%> alt="weather-icon" class="weather-image">
 <p id="weather"><%= weather %></p>
+<div class="priority__box">   
+  <h2>What are your priorities today?</h2></div>
+        <div class="box">
 </div>
+<form class="form" method="POST" action="/">
+
+  <input
+    type="text"
+    name="addInput"
+    placeholder="Add a priority"
+    autocomplete="off"
+    autofocus
+  />
+  <button type="submit" name="btn">+</button>
+
+</form>
+
+
     </div>
-        <h2>What are your priorities today?</h2>
 
-            <div class="box">
+    
 
-    <form class="form" method="POST" action="/">
-      <input
-        type="text"
-        name="addInput"
-        placeholder="Add a priority"
-        autocomplete="off"
-        autofocus
-      />
-      <button type="submit" name="btn">+</button>
-    </form>
-
+    
             <% for(i=0; i<newItem.length; i++){ %>
       <div class="item">
                 <input type="checkbox">
