--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,7 +29,8 @@ h2 {
 }
 .priority__box {
   background: black;
-  height: 30px;
+  padding: 6px 0px;
+  min-height: 30px;
   box-shadow: 1px 3px grey;
   border-radius: 6px;
 }
@@ -41,17 +42,19 @@ h2 {
 
 .item {
   min-height: 40px;
+  background: white;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #f1f1f1;
 }
 
-.form {
+.item:nthof .form {
   min-height: 70px;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #f1f1f1;
   background: white;
+  border-radius: 4px;
 }
 
 .weather-image {
@@ -68,7 +71,13 @@ h2 {
   padding: 8px;
   text-shadow: 2px 3px black;
 }
-
+#extWeather {
+  bottom: 200px;
+  position: absolute;
+  color: white;
+  font-size: 15px;
+  text-shadow: 1px 2px black;
+}
 .item:last-child {
   border-bottom: 0;
 }
@@ -94,12 +103,12 @@ p {
 
 form {
   text-align: center;
-  margin-left: 20px;
+  background: white;
 }
 
 button {
   min-height: 50px;
-  width: 50px;
+  min-width: 50px;
   border-radius: 50%;
   border-color: transparent;
   background-color: #ff729d;
@@ -107,6 +116,9 @@ button {
   font-size: 30px;
   padding-bottom: 1px;
   border-width: 0;
+}
+button:hover {
+  background: #ff286a;
 }
 
 input[type="text"] {
@@ -122,7 +134,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #ffbc77;
+  opacity: 0.2;
 }
 
 ::placeholder {
