--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,8 +16,9 @@
 <div class="weather__box">
 <img src=<%=icon%> alt="weather-icon" class="weather-image">
 <div class="weather__text">
-<p id="weather"><%= weather %></p>
-<p id="extWeather"><%= extWeather %></p>
+  <p class="weather__temp"><%=temp%>&#176</p>
+<p id="weather"><%=weather %></p>
+<p id="extWeather"><%=extWeather %></p>
 </div>
 <div class="priority__box">   
   <h2>What are your priorities today?</h2>
