add groceries route

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -12,7 +12,7 @@
 
     <div class="box" id="heading">
 
-<h1>It's <%=day%></h1>
+<h1><%=title%></h1>
 <div class="weather__box">
 <img src=<%=icon%> alt="weather-icon" class="weather-image">
 <div class="weather__text">
