update about page text

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,10 @@
 <%- include ("header"); %>
 <h1>About this app</h1>
+<div class="about">
+  <p>Uses Javscript, EJS, Request, NodeJS, and Express.</p>
+  <p>
+    I used this project to become more familiar with Request, ES6 Promises,
+    Arrow Functions, and Async Await.
+  </p>
+</div>
 <%- include ("footer"); %>
