--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -27,6 +27,12 @@ footer {
   border-radius: 5px 5px 0px 0px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
+.about {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 50px 550px;
+}
 
 .weather__box {
   min-height: 400px;
